--- a/data/web/react-app/src/index.css
+++ b/data/web/react-app/src/index.css
@@ -1,5 +1,10 @@
-body {
+* {
+  padding: 0;
   margin: 0;
+}
+
+body {
+  height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -18,8 +23,20 @@ code {
   box-sizing: inherit;
 }
 
-:root {
+#root {
   box-sizing: border-box;
+  position: absolute;
+  height: auto;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+.App {
+  display: grid;
+  grid-template-rows: 150px auto;
+  height: 100%;
 }
 
 main {
@@ -128,6 +145,7 @@ main {
 
 /* Party Create */
 .party-create {
+  height: 100%;
   display: grid;
   margin: 0 2em;
   grid-template-areas:
@@ -149,6 +167,9 @@ main {
 
 .party-create .ingredient-list-container {
   grid-area: ingredientlist;
+  display: grid;
+  grid-template-rows: 40px auto;
+  grid-template-columns: 223px;
 }
 
 .party-create .cocktail-list-container {
@@ -159,50 +180,66 @@ main {
   border: 1px solid gray;
   border-radius: 0.3em;
   padding: 1em;
+  line-height: 32px;
+}
+
+.ingredient-list tr > td {
+  max-width: 110px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .ingredient-list tr > td:first-child {
   padding-right: 2em;
 }
 
-.cocktail-list-container table {
+.cocktail-list-container {
+  display: grid;
+  grid-template-rows: 40px auto;
+}
+
+.cocktail-list-container .recipes {
   border: 1px solid gray;
   border-radius: 0.3em;
   padding: 1em;
   width: 100%;
 }
 
-.add-ingredient-backdrop {
+.add-ing-overlay {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: rgb(0 0 0 / 0.4);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  z-index: 10;
 }
 
-.add-ingredient-container {
+.add-ing-container {
+  position:fixed;
+  z-index: 11;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   background-color: white;
   width: 60ch;
   border-radius: 0.5em;
   padding: 2em 2.5em;
 }
 
-.add-ingredient-container > h3 {
+.add-ing-container > form > h3 {
   margin: 0 0 1em 0;
 }
 
-.add-ingredient-container > input {
+.add-ing-container > form > input {
   font-size: 1rem;
   margin-right: 1em;
   padding: 0.5em 1em;
   width: 35ch;
 }
 
-.add-ingredient-container > button {
+.add-ing-container > form > button {
   font-size: 1rem;
   padding: 0.5em 1em;
   font-weight: bold;
@@ -212,9 +249,39 @@ main {
   border-radius: 0.3em;
 }
 
-.add-ingredient-container > button:hover {
+.add-ing-container > form > button:hover {
   font-size: 1rem;
   padding: 0.5em 1em;
   background-color: black;
   color: white;
 }
+
+.recipes-container {
+    display: grid;
+    grid-template-columns: 150px auto;
+    line-height: 25px;
+}
+
+.left-header, .right-header {
+    font-weight: bold;
+    font-size: 17px;
+    margin-bottom: 10px;
+}
+
+.ingredient-add-button, .ingredient-remove-button {
+  appearance: none;
+  background-color: #2ea44f;
+  border: 1px solid rgba(27, 31, 35, .15);
+  border-radius: 6px;
+  box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
+  box-sizing: border-box;
+  color: #fff;
+  display: inline-block;
+  font-weight: 600;
+  padding: 4px 12px;
+}
+
+.ingredient-remove-button {
+    background-color: RED;
+}
+
